dashboard: removed 2 cards in the dashboard and fixed alignment

--- a/fairshare1/src/main/resources/application.properties
+++ b/fairshare1/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Use env vars if available (safer than hardcoding creds). You can set DB_USER and DB_PASS locally or in runtime environment.
 spring.datasource.url=jdbc:mysql://localhost:3306/db_pmss
 spring.datasource.username=root
-spring.datasource.password=Virmeedz6.
+spring.datasource.password=Cancer_17
 
 # Hibernate / JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
